--- a/styles/destination.css
+++ b/styles/destination.css
@@ -143,12 +143,13 @@ ul li a {
 .container-destination-details {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .destination-name {
-    color: #101828;
+    color: #6941C6;
     font-family: Inter;
-    font-size: 24px;
+    font-size: 14px;
     font-weight: 600;
 
 }
