--- a/styles/destination.css
+++ b/styles/destination.css
@@ -13,7 +13,7 @@ ul {
 }
 
 ul li a {
-    color: white;
+    color: rgb(223, 221, 221);
     font-size: 14px;
     font-weight: 500;
 }
@@ -39,6 +39,7 @@ ul li a {
 
 .active-link {
     font-weight: 700;
+    color: white;
 }
 
 .container-title {
