--- a/styles/login.css
+++ b/styles/login.css
@@ -4,6 +4,7 @@ body {
     height: 500px;
     font-family: "Poppins", sans-serif;
     font-size: 16px;
+    width: 1440px;
 }
 
 * {
@@ -16,7 +17,6 @@ button {
     cursor: pointer;
 }
 
-
 .container-login {
     display: grid;
     align-items: center;
@@ -25,7 +25,7 @@ button {
 }
 
 .container-slogan {
-    background-image: url(assets/bg-alam.png);
+    background-image: url(/assets/bg-alam.png);
     width: 796px;
     height: 1024px;
     display: flex;
