--- a/styles/signup.css
+++ b/styles/signup.css
@@ -4,6 +4,7 @@ body {
     height: 500px;
     font-family: "Poppins", sans-serif;
     font-size: 16px;
+    width: 1440px;
 }
 
 * {
@@ -25,7 +26,7 @@ button {
 }
 
 .container-slogan {
-    background-image: url(assets/bg-alam.png);
+    background-image: url(/assets/bg-alam.png);
     width: 796px;
     height: 1024px;
     display: flex;
